--- a/FinalFantasy/appsettings.json
+++ b/FinalFantasy/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=FinalFantasyDB;Integrated Security=SSPI;TrustServerCertificate=true;"
+  },
   "AllowedHosts": "*"
 }
