--- a/FinalFantasy/appsettings.json
+++ b/FinalFantasy/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=FinalFantasyDB;Integrated Security=SSPI;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=tcp:kirielss.database.windows.net,1433;Initial Catalog=FinalFantasyDB;Persist Security Info=False;UID=GabrelDantas@hotmail.com;Authentication=ActiveDirectoryIntegrated;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
