--- a/FinalFantasy/appsettings.Development.json
+++ b/FinalFantasy/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=FinalFantasyDB;Integrated Security=SSPI;TrustServerCertificate=true;"
+  },
+  "AllowedHosts": "*"
 }
